feat(coq-model-attribute): $attributes items value can now be object
If object given as $attributes item value, it will be used as
attributes to add on element

Closes #9

--- a/examples/directives.html
+++ b/examples/directives.html
@@ -14,11 +14,15 @@
 
       app.factory('TeamsModel', function($resource, Coq) {
         return Coq.factory({
-           $resource : $resource('/teams/:id'),
-           $attributes : {
-             id   : 'number',
-             name : 'text'
-           }
+          $resource : $resource('/teams/:id'),
+          $attributes : {
+            id   : 'number',
+            name : {
+              type      : "text",
+              required  : "required",
+              maxlength : 10
+            }
+          }
         });
       });
 
