--- a/examples/directives.html
+++ b/examples/directives.html
@@ -44,10 +44,11 @@
 
     <h2>Create a team</h2>
 
-    <form coq-model="team2" ng-model="myForm" ng-submit="team2.save()">
+    <form coq-model="team2" ng-model="myForm2" ng-submit="team2.save()">
         <p>Name : <input coq-model-attribute="name"></p>
 
         <input type="submit">
+        <a ng-click="team2.save()" href>click me</a>
     </form>
   </div>
 </body>
